--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^8.2.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "moment": "^2.29.1",
     "socket.io": "^4.0.0",
     "url-parse": "^1.5.1"
   },
