--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,11 +2,11 @@ version: '3.4'
 
 services:
   socketiowithoutdb:
-    image: socketiowithoutdb:v1
+    image: socketiowithoutdb:v2
     build:
       context: .
       dockerfile: ./Dockerfile
-    environment:
-      NODE_ENV: production
+    #    environment:
+    #      NODE_ENV: production
     ports:
       - 10404:10404
